// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkPhoneNumberInput should render correctly 1`] = `
<View
  style={null}
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 17,
      }
    }
  >
    <Text
      allowFontScaling={false}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "rgba(104, 105, 127, 1)",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 17,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      Phone number
    </Text>
    <View
      accessibilityRole="button"
      accessibilityStates={Array []}
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomWidth": 1,
              "borderColor": "rgb(221, 221, 229)",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Image
          resizeMode="contain"
          style={
            Array [
              undefined,
              Array [
                Object {
                  "backgroundColor": "rgb(241, 242, 248)",
                  "height": 12,
                  "marginEnd": 8,
                  "width": 16,
                },
              ],
            ]
          }
        />
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {},
              Array [
                Object {
                  "marginEnd": "auto",
                },
                false,
              ],
            ]
          }
        >
          +44
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginStart": 4,
                },
                null,
              ],
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgb(17, 18, 54)",
              "bottom": 0,
              "flex": 1,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(221, 221, 229, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "marginStart": 4,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={true}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        placeholderTextColor="rgb(205, 205, 215)"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderBottomWidth": 0,
              "color": "rgb(17, 18, 54)",
              "flex": 1,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 27,
              "paddingHorizontal": 0,
              "paddingVertical": 4,
              "textAlign": "left",
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`iOS BpkPhoneNumberInput should render correctly with \`editable\` false 1`] = `
<View
  style={null}
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 17,
      }
    }
  >
    <Text
      allowFontScaling={false}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "rgba(221, 221, 229, 1)",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 17,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      Phone number
    </Text>
    <View
      accessibilityRole="button"
      accessibilityStates={
        Array [
          "disabled",
        ]
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomWidth": 1,
              "borderColor": "rgb(221, 221, 229)",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Image
          resizeMode="contain"
          style={
            Array [
              undefined,
              Array [
                Object {
                  "backgroundColor": "rgb(241, 242, 248)",
                  "height": 12,
                  "marginEnd": 8,
                  "width": 16,
                },
              ],
            ]
          }
        />
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {},
              Array [
                Object {
                  "marginEnd": "auto",
                },
                Array [
                  Object {
                    "color": "rgb(221, 221, 229)",
                  },
                ],
              ],
            ]
          }
        >
          +44
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "marginStart": 4,
                },
                Object {
                  "color": "rgb(221, 221, 229)",
                },
              ],
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgb(17, 18, 54)",
              "bottom": 0,
              "flex": 1,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(221, 221, 229, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "marginStart": 4,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        placeholderTextColor="rgb(205, 205, 215)"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderBottomWidth": 0,
              "color": "rgb(17, 18, 54)",
              "flex": 1,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 27,
              "paddingHorizontal": 0,
              "paddingVertical": 4,
              "textAlign": "left",
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;
